# Simple

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
IO/Logging/: CMakeLists.txt  Makefile
IO/Logging/src/: ALogger.cpp  ALogger.hpp  Logger.cpp  Logger.hpp  WLogger.cpp  WLogger.hpp  main.cpp  wmain.cpp
IO/Terminal/: ATerminal.hpp  CMakeLists.txt  Terminal.cpp  Terminal.hpp  TerminalInfo.hpp  main.cpp
IO/Terminal/src/: AANSITerminal.cpp  AANSITerminal.hpp  ANSITerminal.cpp  ANSITerminal.hpp  AStdTerminal.hpp  ATerminal.cpp  ATerminal.hpp  Terminal.cpp  Terminal.hpp  TerminalInfo.hpp  WANSITerminal.cpp  WANSITerminal.hpp  main.cpp  wmain.cpp
